--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/swagger": "^1.1.1",
+    "elysia": "latest",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "bun-types": "latest"
