--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", // This points to the root of your project
+    "paths": {
+      "@/*": ["src/*"] // Adjust 'src' to match your source directory
+    },
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
