--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts",
-    "build": "bun build"
+    "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.1.1",
